# bee-svn

trunk/seraph/src/: Makefile  README  README.txt  TODO  _linux  baseclass.c  baseclass.h  basedb.c  cfg_template  config.c  configure.ac  copyright  core.c  dbg.c  debug.c  do  fileop.c  main.c  mngrd.c  mngrd.debug  mngrd1.c  scan.c  scan.l  seraph.c  seraph.env  setup.c  setup.nc  sock.c  socket.c  srph.c  srv_jabber.c  srv_tcp.c  srv_xmlrpc.c  str.c  strop.c  sut.c  svc_xmlrpc.c  system.mk  t.c  tags  (+8 more)
trunk/seraph/src/classtst/: a.out  baseclass.c  baseclass.h  basedb.c  testdb
trunk/seraph/src/classtst/1/: baseclass.c  baseclass.h  db.c
trunk/seraph/src/include/: baseclass.h  basedb.h  config.h  core.h  core_private.h  dbg.h  debug.h  fileop.h  global.h  httpd.h  httpd_priv.h  md5.h  rpc.h  rshd.h  scan.h  seraph.h  socket.h  strop.h  sut.h  sut_private.h  svc_xmlrpc.h  testdb.h  userdb.h
trunk/seraph/src/include/CVS/: Entries  Repository
trunk/seraph/src/lib/CVS/: Entries  Repository
trunk/seraph/src/objs/CVS/: Entries  (+1 more)
trunk/seraph/src/php/: add_machine.php  add_test.php  base_lib.php  clear_logs.php  form_addtest.php  form_login.php  form_register.php  index.php  jobs.php  machines.php  mystyle.css  percent_bar.js  register.php  run_tests.php  set_config.php  vcXMLRPC.js  view.php  view_job.php
trunk/seraph/src/rpc/: .lob  Makefile  srv_jabber.c  srv_tcp.c  srv_xmlrpc.c  svc_jabber.c  svc_tcp.c  svc_xmlrpc.c
trunk/seraph/src/tools/: Makefile  cp.c  mkdir.c  refresh.c  rexec.c  rm.c  start.c  stop.c  template.c
trunk/seraph/src/xmlrpc/: clxmlrpc.pl
(+385 files in other folders)
