AC_INIT(package, version, bug-report-address)
#information on the package
#checks for programs
#checks for libraries
#checks for header files
AC_CHECK_HEADER([stdio.h],
                [AC_DEFINE([HAVE_STDIO_H], [1],
                        [Define to 1 if you have <stdio.h>.])],
                [AC_MSG_ERROR([Sorry, can't do anything for you])])
#checks for types
#checks for structures
#checks for compiler characteristics
#checks for library functions
#checks for system services
AC_CONFIG_HEADERS( configure.h)
#AC_CONFIG_FILES([config.h])
AC_OUTPUT
